fix login page align

--- a/assets/styles/login.css
+++ b/assets/styles/login.css
@@ -1,11 +1,11 @@
 #FormLogin div.checkbox {
 	float: left;
-	padding: 8px 0;
+	padding: 0;
 	width: 22px;
 }
 
 #FormLogin label.checkbox {
-	line-height: 30px;
+	line-height: 25px;
 	float: left;
 }
 
@@ -18,6 +18,7 @@
 
 #FormLogin .no-account {
 	display: block;
+    float: none;
     margin-bottom: 10px;
 }
 
